src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-dwF1000-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\ndefault column width: F1000\ntabbed"
expression: snapshot
---
initial configure:
size: 1000 × 688, bounds: 1239 × 688, states: []

post-map configures:
size: 1000 × 688, bounds: 1239 × 688, states: [Activated]
